@@ -1,3 +1,7 @@
+2002-11-05  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* include/libbk_oscompat.h: don't need GMTIME_R_PROTOTYPE, just do it
+
 2002-10-11  James Tanis  <jtt@hawking.sysdetect.com>
 
 	* lib/b_addrgroup.c (tcp_connect_start): Don't just return error
